VERSION 1.003:

 - The player now moves when standing on a moving platform.
 - Map editors can now specify a direction for moving platforms to be moving
   in when the map spawns, for the purposes of level design and platforming.

VERSION 1.002:

 - One of the doors in level 6 now opens diagonally in order to preserve the
   original challenge of the level.
 - Finishing the last level no longer raises a SystemExit; no further
   revisions to the code should use a SystemExit for anything other than a
   bug kill.
 - Ending the mainloop now displays a "quit message" (with the exception of
   end-of-games caused by a SystemExit).
 - New "bat" enemy added.
 - Game's default display size has been changed to 960x540
 - The game now has a new in-game message system, making the physical letters
   that used to float around the levels obsolete
 - New training levels to smooth the learning curve for new players
 - The "You are dead" message now displays in-game rather than in the terminal

Changes between Orange Guy's Quest version 1.0 and 1.1:

 - WINDOWS option added to allow users to define whether they want to use a
   backslash for their system.
 - Image sprites are now loaded into memory rather than being loaded once for
   every single time they are needed.
 - Image sprites are not loaded if they are not needed (user chooses the
   'Ancient' graphics setting)
 - The game no longer attempts to randomize enemy sprites, as they were not
   randomized in the final version of 1.0 and they are not randomized now.
 - The game no longer ends with an Index Exception.
 - Removed some of the attrocious final levels.
 - The location of the secret exit can no longer be discovered by observing
   where the player's sprite is clipped by it.
 - The game now has a semi-proper ending involving finding a sword.
 - Resetting the level no longer causes the level to reset several times.
 - Dying no longer kills the game immediately.  Instead the player is
   displayed having "died."