@@ -63,7 +63,7 @@ WWWWWWWWWWWWWWWWWWWWW       W WW
  WWWWWWWWWWWWWWWWWWWWWWWWWWWW WWWW WWWW                  W
 W                                 W    P                KW
 WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW W           WW
-                                    W     9ME8    M     WW
+                                    W     9rE8    r     WW
                                      WWWWWWWWWWWWWWWWWWWWW
 "Watch out for giant rats!"
 ;
@@ -104,19 +104,19 @@ WWW
    W
 "Not all doors should be opened"
 ;
-             M      M      M      M      M      M      M      M      M      M      M
+             r      r      r      r      r      r      r      r      r      r      r
 WWW7WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
 W                         K
 W    WWWWWWWWWWWWWWWWWWW8WW       WWWWWWW
-W                         W             W     M     W                                         W
+W                         W             W     r     W                                         W
 W  W                      6             WWWWWWWWWWWWW                               W
-W    W                    W                         W                     M
+W    W                    W                         W                     r
 W      W                  W                         W               WWWWWWWWWWWWW
 W        W                6                         W           W
 W                         W    WWWWW                W     W
 W            WWW          W  SSSSSSSSSSSW           WSSSSSSSSSSS
 W           WE8*       S  W WWWWWWWWWWWWWW          WWWWWWWWWWWW
-W            WWWW   WR WS W               W
+W            WWWW   WG WS W               W
 W                    W  W W                W
 W                     W  4WS                W
 W                      W  WWWW  WWW          W
@@ -124,7 +124,7 @@ D                       W     W       W W     W S
 W                        WWWW  W      W W      WW
 W     W         W      W     W  WSSSSSW WSSSSS         W
 W                             W  WWWWWW WWWWWW        W
-W     W                        W       M     W       W
+W     W                        W       r     W       W
 W                               WWWWWWWWWWWWWW      W
 W                                                  W
 W                            WWWWWWWWWWWWW        W
@@ -138,9 +138,9 @@ DWWW       WWWWWWWW
 W   WW  WW         W
 W     WW            W    SS   WWWWW          W
 WP    W2      W    W     WWWSSSSS            W
-WWWWR K            W  W  W  WWWWW          S W S
+WWWWG K            W  W  W  WWWWW          S W S
 W       $          W     W                 WSWSW
-WWWWWW8WWWWWW      W        M M             W W
+WWWWWW8WWWWWW      W        r R             W W
                      WWWWWWWWWWWWWWWW        W
 
 
@@ -170,5 +170,5 @@ WWWWWW8WWWWWW      W        M M             W W
 
                            WWWWW
 
-                                       R     M
+                                       G     r
                                        WWWWWWWWWWWWW
