@@ -1,15 +1,14 @@
-test levels
  WWWWWWWW WWWWWWWWWWWWD
-Wcollide W           WWWWWWWWW
+W        W           WWWWWWWWW
 WP.............      >
 W$WWWWWWWWWWWW.      <
 W   "Level Message"         ^.
 WWWWWWWWWWWWWW.  .
-             W...M...    B    +-
+             W..r.R..    B    +-
              WWWWWWWK.
                    WW.
                     W.       W$
-                    WR...4...4E
+                    WG...4...4E
                     WWWWWWWWWWW
 ": This is a test level
 for Orange Guy's Quest"
